refactor: modernize idioms across all modules
Pattern switches for JsonLeaves, the shutdown drain and PeerHub prefixes;
pattern equals for JsonObject/JsonArray; raw-type cleanup in
FlowDriverDefault. Immutable factories (copyOf/of) where order and null
semantics allow; order-promising maps and live views deliberately kept.
Thread creation unified on Thread.ofPlatform builders (factories, watchers,
acceptor, hooks). Extension, LazyValue and ScopedCache.Session move off
their public intrinsic monitors onto private locks. Extension.asMap
documents its snapshot semantics; remaining fully-qualified names folded
into imports with unused imports dropped.